<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="image_be_here">Image Be Here</string>
    <string name="check">Check</string>
    <string name="check_ans">Check</string>
    <string name="you_score_be_9_out_of_10">You score be 9 out of 10</string>
    <string name="congrats">Congrats!</string>
    <string name="trophy">trophy</string>
    <string name="result">Result</string>
</resources>