<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ResultActivity"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/ResultId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="174dp"
        android:contentDescription="@string/trophy"
        android:src="@drawable/trophy"
        android:paddingRight="38sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/congrats"
        android:text="@string/congrats"
        android:textSize="45sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/Username"
        tools:text="Username"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/score"
        tools:text="@string/you_score_be_9_out_of_10"
        android:textSize="20sp"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Finish"
        android:textSize="30sp"
        android:textStyle="bold">

    </androidx.appcompat.widget.AppCompatButton>


</LinearLayout>